--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,9 @@ venv.bak/
 .spyderproject
 .spyproject
 
+# Visual Studio Code settings
+*/.vscode/
+
 # Rope project settings
 .ropeproject
 
@@ -127,3 +130,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# .env files
+*/*.env*
